# lunch-log

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  manage.py  openapi.json  pyproject.toml  pytest.ini  requirements.txt  sample.env
.github/workflows/: lint.yaml  test.yaml
apps/auth/: serializers.py  tests.py  urls.py  views.py
apps/common/: models.py
apps/receipts/: admin.py  filters.py  helpers.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
apps/receipts/migrations/: 0001_initial.py  0002_receipt_google_places_last_updated.py
apps/recommendations/: admin.py  helpers.py  models.py  serializers.py  tasks.py  tests.py  urls.py  utils.py  views.py
apps/recommendations/fixtures/: google_places_data.json
apps/recommendations/migrations/: 0001_initial.py
apps/users/: admin.py  models.py  serializers.py
apps/users/migrations/: 0001_initial.py
config/nginx/: app.conf
lunch_log/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
